arreglado versiones node, routing y modules que faltaban

--- a/crudFRONT/src/app/app.component.html
+++ b/crudFRONT/src/app/app.component.html
@@ -333,4 +333,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<router-outlet />
+<!-- app.component.html -->
+<router-outlet></router-outlet>  <!-- Aquí se cargarán los componentes según las rutas -->
+
